- fixed problem with form elements not lining up. - the fix was simple. each line of the form had to be wrapped in a <p> tag to give enough spacing between subsequent lines. once thats done, the even labels with wrapping text do not mess up floating.
git-svn-id: http://svn.geoborealis.ca/tng_port/trunk@51 48cf7ab6-de19-11db-af8f-61c7962e56a9

--- a/style.css
+++ b/style.css
@@ -240,11 +240,11 @@ a:hover {
 	border-width:thin;
 	/* width: 345px; */
 	width: 40%;
-	margin-top: 5px;
-	margin-bottom: 5px;
+	/*margin-top: 5px;
+	margin-bottom: 5px;*/
 	margin-left: 5px;
 	margin-right: 0px;
-	height: 20px;
+	height: 25px;
 }
 
 .lbl_regular, .lbl_checkbox{
